# otus-python-01-01

./: .gitignore  .pre-commit-config.yaml  README.md  default_config.ini  log_analyzer.py  pyproject.toml  requirements.txt
.github/workflows/: log_analyzer_workflow.yml
pytest/: test_config.py  test_log_stuff.py  test_logging_config.py  test_report_stuff.py
src/app/: config.py  log_stuff.py  logging_config.py  report_stuff.py
